Correct image name in  build section on workflow

--- a/.github/workflows/cicd-workflow-frontend.yml
+++ b/.github/workflows/cicd-workflow-frontend.yml
@@ -17,10 +17,12 @@ jobs:
         uses: docker/setup-qemu-action@v1
 
       - name: Build Docker image
-        run: docker build -t video-recommendation-react .
+        run: docker build -t navidhejazi/video-recommendation-react .
 
       - name: Log in to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        env:
+          REACT_APP_API_BASE_URL: ${{ secrets.REACT_APP_API_BASE_URL }}
 
       - name: Push Docker image
         run: docker push navidhejazi/video-recommendation-react:latest
