--- a/.github/workflows/cicd-workflow-frontend.yml
+++ b/.github/workflows/cicd-workflow-frontend.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Build Docker image
         run: docker build -t navidhejazi/video-recommendation-react .
+        env:
+          REACT_APP_API_BASE_URL: ${{ secrets.REACT_APP_API_BASE_URL }}
 
       - name: Log in to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
